--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
@@ -441,6 +441,7 @@ Never slack in her care she personally rented up the saplings with outpourings f
 अरण्येति ॥ अरण्यबीजानां नीवारादोनामञ्जलयस्तेषां दानेन लालिता हरिणाश्च तस्यां देव्यां तथा विशश्वसुर्विस्त्रिम्भं जग्मुः 'समौ विस्त्रम्भविश्वासौ' इत्यमरः । यथा कुतूहलादौत्सुक्यात्तदीयैर्हरिण संबन्धिभिर्नयनैर्नेत्रैः । करणैः । स्वकीये लोचमे सखीनां पुरः पुरतः अनेन तेषां संबन्धसहत्वमुक्तम् । अमिमीत । अक्षिपरिमाणतारतम्यज्ञानाय मानं चकारेत्यर्थः । केचित्तु सा पार्वती तदीयैर्नेत्रैः कुतूहलात्पुरोऽग्रे वर्तमानां सखीनां लोचने अमिमीत व्रतस्थत्वात्मन इत्याहुः । 'माङ् माने' इत्यस्माद्धातोलंङ् । इयमेव खलु विश्वासस्य परा काष्ठा यदक्षिपीडनेऽपि न क्षुभ्यन्तीति भावः ॥ 5.15 ॥
 </details>
 
+## आतिथ्यम्
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कृताभिषेकां हुतजातवेदसं त्वग्-उत्तरासङ्गवतीम् अधीतिनीम् ।  
@@ -474,13 +475,21 @@ Never slack in her care she personally rented up the saplings with outpourings f
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-विरोधिसत्वोज्झ्तिपूर्वमत्सरं द्रुमैरभीष्टप्रसवार्चितातिथि ।  
-नवोटजाभ्यन्तरसंभृतानलं तपोवनं तच्च बभूव पावनम् ॥ 5.17 ॥  
+विरोधि-सत्वोज्झित--पूर्व-मत्सरं  
+द्रुमैर् अभीष्ट-प्रसवार्चितातिथि ।  
+नवोटजाभ्यन्तर-संभृतानलं  
+तपो-वनं तच् च **बभूव** पावनम् ॥ 5.17 ॥+++(5)+++  
 </details>
+
+<details><summary>English</summary>
+
+(17.) The sacred grove too became holy, where the previous antipathy between warring beasts was abandoned, where the guests (travellers) were well gratified with the (30) (gifts of) desired fruit by the trees, and where the sacred fires were kindled in newly built buts of leaves. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
-विरोधिसत्वोज्झ्तिपूर्वमत्सरं द्रुमैरभीष्टप्रसवार्चितातिथि ।  
+विरोधिसत्वोज्झितपूर्वमत्सरं द्रुमैरभीष्टप्रसवार्चितातिथि ।  
 नवोटजाभ्यन्तरसंभृतानलं तपोवनं तच्च बभूव पावनम् ॥ 5.17 ॥  
 </details>
 
@@ -494,17 +503,30 @@ Never slack in her care she personally rented up the saplings with outpourings f
 विरोधीति ॥ विरोधिभिः सत्त्वैर्गोव्याघ्रादिभिरुज्झितपूर्वमत्सरं त्यक्तपूर्ववैरम् । हिंसारहितमित्यर्थः । द्रुमैरभूष्टप्रसवेनेष्टफलेनार्चिताः पूजिता अतिथयो यस्मिंस्तत्तथोक्तम् । नवानामुटजानां पर्णशालानामभ्यन्तरेषु संभृताः संचिता अनला अग्नयो यस्मिंस्तत्तथोक्तं तच्च तपोवनम् । पावयतीति पावनं बभूव । अहिंसातिथिसत्काराग्निपरिचर्याभिर्जगत्पावनं बभूवेत्यर्थः ॥ 5.17 ॥
 </details>
 
+## महातपः
+### ग्रीष्मे
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-यदा फलं पूर्वतपःसमाधिना न तावता लभ्यममंस्त काङ्क्षितम् ।  
-तदानपेक्ष्य स्वशरीरमार्दवं तपो महत्सा चरितुं प्रचक्रमे ॥ 5.18 ॥  
+यदा फलं पूर्व-तपः-समाधिना  
+**न** तावता **लभ्यम् अमंस्त** काङ्क्षितम् ।  
+तदा **ऽनपेक्ष्य** स्व-शरीर-मार्दवं  
+तपो महत् सा चरितुं प्रचक्रमे ॥ 5.18 ॥  
 </details>
+
+
 
 <details><summary>मूलम्</summary>
 
 यदा फलं पूर्वतपःसमाधिना न तावता लभ्यममंस्त काङ्क्षितम् ।  
 तदानपेक्ष्य स्वशरीरमार्दवं तपो महत्सा चरितुं प्रचक्रमे ॥ 5.18 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(18.) When she thought the desired fruit not to be attainable by that kind of penance which she had been already practising, then, disregardful of the delicacy of her body, she began a mightier penance. 
+</details>
+
+
 
 <details><summary>अन्वयः</summary>
 
@@ -518,14 +540,22 @@ Never slack in her care she personally rented up the saplings with outpourings f
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-क्लमं ययौ कन्दुकलीलयापि या तया मुनीनां चरितं व्यगाह्यत ।  
-ध्रुवं वपुः कञ्चनपद्मनिर्मितं मृतु प्रकृत्या च ससारमेव च ॥ 5.19 ॥  
+क्लमं ययौ कन्दुक-लीलया ऽपि या  
+तया मुनीनां चरितं **व्यगाह्यत** ।  
+ध्रुवं वपुः काञ्चन-पद्म-निर्मितं  
+मृदु प्रकृत्या च स-सारम् एव च ॥ 5.19 ॥+++(4)+++  
 </details>
+
+<details><summary>English</summary>
+
+(19.) She, who was fatigued even by playing with the ball, entered upon the course of life of anchorites: verily her body was composed of gold lotuses, as it was delicate by nature and yet touch (full of substance). 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
 क्लमं ययौ कन्दुकलीलयापि या तया मुनीनां चरितं व्यगाह्यत ।  
-ध्रुवं वपुः कञ्चनपद्मनिर्मितं मृतु प्रकृत्या च ससारमेव च ॥ 5.19 ॥  
+ध्रुवं वपुः काञ्चनपद्मनिर्मितं मृदु प्रकृत्या च ससारमेव च ॥ 5.19 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -540,9 +570,18 @@ Never slack in her care she personally rented up the saplings with outpourings f
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-शुचौ चतुर्णां ज्वलतां हविर्भुजां शुचिस्मिता मध्यगता सुमध्यमा ।  
-विजित्य नेत्रप्रतिघातिनीं प्रभामनन्यदृष्टिः सवितारमैक्षत ॥ 5.20 ॥  
+शुचौ +++(मासे ग्रीष्मे)+++ चतुर्णां ज्वलतां हविर्-भुजां   
+शुचि-स्मिता **मध्य-गता** सुमध्यमा ।  
+**विजित्य** नेत्र-प्रतिघातिनीं प्रभाम्  
+अनन्य-दृष्टिः सवितारम् **ऐक्षत** ॥ 5.20 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(20.) 
+In summer, she of sweet smiles and delicate waist, sitting in the midst of four blazing fires, gazed at the sun (the source of life) with her sight not directed to any thing else, having got the better of (being accustomed to bear) his lustre that dazzles the eye. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -562,9 +601,17 @@ Never slack in her care she personally rented up the saplings with outpourings f
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तथातितप्तं सवितुर्गभस्तिभिर्मुखं तदीयं कमलश्रियं दधौ ।  
-अपाङ्गयोः केवलमस्य दीर्घयोः शनैः शनैः श्यामिकया कृतं पदम् ॥ 5.21 ॥  
+तथा **ऽतितप्तं** सवितुर् गभस्तिभिर्  
+मुखं तदीयं कमल-श्रियं **दधौ** ।  
+अपाङ्गयोः केवलम् अस्य दीर्घयोः  
+शनैः शनैः श्यामिकया कृतं पदम् ॥ 5.21 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(21.) Then her face scorched by the rays of the sun in that manner, bore the Leauty of a day lotus; but gradually round the long corners of her eyes only dark colour made its appearance. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -584,14 +631,22 @@ Never slack in her care she personally rented up the saplings with outpourings f
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अयाचितोपस्थितमम्बु केवलं रसात्मकस्योडुपतेश्च रश्मयः ।  
-बभूव तस्याः किल पारणाविधिनं वृक्षवृत्तिव्यतिरिक्त साधनः ॥ 5.22 ॥  
+अयाचितोपस्थितम् अम्बु केवलं,  
+रसात्मकस्योडु-पतेश् च रश्मयः ।  
+**बभूव** तस्याः किल पारणा-विधिर्  
+न वृक्ष-वृत्ति-व्यतिरिक्त साधनः ॥ 5.22 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(22.) Only the water that came to her without any effort on her part, and the rays of the moon (lit. Lord of the constellations), full of nectar, broke her fast, not unlike the means of subsistence of the trees. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
 अयाचितोपस्थितमम्बु केवलं रसात्मकस्योडुपतेश्च रश्मयः ।  
-बभूव तस्याः किल पारणाविधिनं वृक्षवृत्तिव्यतिरिक्त साधनः ॥ 5.22 ॥  
+बभूव तस्याः किल पारणाविधिर्न वृक्षवृत्तिव्यतिरिक्त साधनः ॥ 5.22 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -604,11 +659,20 @@ Never slack in her care she personally rented up the saplings with outpourings f
 अयाचितेति ॥ अयाचितोपस्थितमप्रार्थितोपनतं केवलमम्बूदकं रसात्मकस्यामृतमयस्योडूनां नक्षत्राणां पतिश्चन्द्रस्तस्य रश्मयश्च तस्याः पार्वत्याः पारणाविधिरभ्यवहारकर्म बभूव । तावन्मात्रसाधनकोऽभूदित्यर्थः । साध्यसाधनयोरभेदेन व्यपदेशः साधनान्तरव्यावृत्त्यर्थः । किलेति प्रसिद्धौ । वृक्षाणां या वृत्तिर्जीवनोपायस्तद्व्यतिरिक्तं साधनमुपायो यस्य स तथोक्तः पारणाविधिर्न बभूव । वृक्षोऽप्ययाचितोपस्थितेन मेधोदकेनेन्दुकिरणैश्च जीवतीति प्रसिद्धम् । अम्बिकापि तावन्मात्रमवालम्बतेत्यर्थः ॥ 5.22 ॥
 </details>
 
+### वृष्टौ
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-निकामतप्ता विविधेन वह्निना नभश्चरेणेन्धनसंभृतेन सा ।  
-तपात्यये वारिभिरुक्षिता नवैर्भुवा सहोष्माणममुञ्चदूर्ध्वगम् ॥ 5.23 ॥  
+निकाम-तप्ता विविधेन वह्निना  
+नभश्-चरेण +++(सूर्येण)+++, +इन्धन-संभृतेन सा ।  
+तपात्यये वारिभिर् **उक्षिता** नवैर्  
+भुवा सहोष्माणम् **अमुञ्चद्** ऊर्ध्व-गम् ॥ 5.23 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(23.) She, extremely heated by various fires-that wandering in the sky and those lighted by means of fuel, being drenched with the fresh showers at the end of summer, gave out, along with the earth (reeking) heat that ascended upwards. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -628,14 +692,21 @@ Never slack in her care she personally rented up the saplings with outpourings f
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-स्थिताः क्षणं पक्ष्मसु ताडिताधराः पयोधरोत्सेधनिपातचूर्णिताः ।  
-वलीषु तस्याः स्खलिताः प्रपेदिरे चिरेण नाभिं प्रथमेदबिन्दवः ॥ 5.24 ॥  
+स्थिताः क्षणं पक्ष्मसु, ताडिताधराः,  
+पयो-धरोत्सेध+++(=ऊर्ध्वभाग)+++-निपात-चूर्णिताः ।  
+वलीषु तस्याः **स्खलिताः** **प्रपेदिरे**  
+चिरेण नाभिं प्रथमोदबिन्दवः ॥ 5.24 ॥+++(5)+++  
+</details>
+
+<details><summary>English</summary>
+
+(24.) The drops of first water (showers) rested for a moment on her eye-lashes, then sriking against the netherlip, broke as they fell on the elevation of ber breasts; and theuce stumbling through the threefolds of her skin, reach. ed, after a long delay, her navel. 
 </details>
 
 <details><summary>मूलम्</summary>
 
 स्थिताः क्षणं पक्ष्मसु ताडिताधराः पयोधरोत्सेधनिपातचूर्णिताः ।  
-वलीषु तस्याः स्खलिताः प्रपेदिरे चिरेण नाभिं प्रथमेदबिन्दवः ॥ 5.24 ॥  
+वलीषु तस्याः स्खलिताः प्रपेदिरे चिरेण नाभिं प्रथमोदबिन्दवः ॥ 5.24 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -650,9 +721,20 @@ Never slack in her care she personally rented up the saplings with outpourings f
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-शिलाशयां तामनिकेतवासिनीं निरन्तरास्वन्तरवातवृष्टिषु ।  
-व्यलोकयन्नुन्मिषितैस्तडिन्मयैर्महातपःसाक्ष्य इव स्थिताः क्षपाः ॥5.25 ॥  
+शिला-शयां ताम् अनिकेत-वासिनीं  
+निरन्तरास्व् अन्तर-वात-वृष्टिषु ।  
+**व्यलोकयन्न्** उन्मिषितैस् तडिन्मयैर्  
+महा-तपः-साक्ष्य इव स्थिताः क्षपाः ॥5.25 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(25.) The nights, the witnesses of the rigid penance of her who slept on a (bare) stone slab, and who lived in open space (lit. not under a sheltered roof) and in the midst of unceasing showers accompanied by winds, watched her, as it were, with their glances in the shape of lightning (flashes). 
+(31) 
+
+</details>
+
+
 
 <details><summary>मूलम्</summary>
 
@@ -670,11 +752,20 @@ Never slack in her care she personally rented up the saplings with outpourings f
 शिलाशयामिति । निरन्तरासु नीरन्ध्रास्वन्तरे मध्ये वाती यासां तादृश्यो या वृष्टयस्तास्वन्तरवातवृष्टिषु । न निकेते गृहे वसतीत्यनिकेतबासिनीम् । अनावृतदेशवासिनीमित्यर्थः । शिलायां शेत इति शिलाशयां शिलातलशायिनीम् । 'अधिकरणे शेतेः' इत्यच्प्रत्ययः । तां पार्वतीं 'साक्षाद्द्रष्टा साक्षी' । 'साक्षाद्‌द्रष्टरि संज्ञायाम्' इतिनिप्रत्ययः । तस्य कर्म साक्ष्यं महातपसः साक्ष्ये स्थिताः क्षपास्तडिन्मयैर्विद्युद्द्रूपैतैरवलोकनैर्व्यलोकयन्निव । इवेति चक्षुषा विलोकनमेवोत्प्रेक्ष्यते । साक्ष्यं तु 'आदित्यचन्द्रावनिलोऽनलश्च द्यौर्भूमिरापो हृदयं यमश्च । अहश्च रात्रिश्च उभे च संध्ये धर्मश्च जानाति नरस्य वृत्तम् ॥' इति प्रमाणसिद्धत्वान्नोत्प्रेक्ष्यमित्यनुसंधेयम् ॥ 5.25 ॥
 </details>
 
+### हेमन्ते
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-निनाय सात्यन्तहिमोत्किरानिलाः सहस्यरात्रीरुदवासतत्परा ।  
-परस्पराक्रन्दिनि चक्रवाकयोः पुरा वियुक्ते मिथुने कृपावती ॥ 5.26 ॥  
+**निनाय** सा ऽत्यन्त-हिमोत्किरानिलाः  
+सहस्य-रात्रीर् उद-वास-तत्परा ।  
+परस्पराक्रन्दिनि+++(→मिथुने)+++ चक्रवाकयोः  
+पुरा वियुक्ते मिथुने **कृपावती** ॥ 5.26 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(26.) Determinately standing in water she passed the nights of Pansha (cold season) with (winter) winds scattering about a thick mass of snowy sleet, pitying the pair of the Chakravaka birds (which stood) before her, separated and crying to each other. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -689,19 +780,25 @@ Never slack in her care she personally rented up the saplings with outpourings f
 
 <details><summary>मल्लिनाथः</summary>
 
-निनायेति । सा पार्वती । उत्किरन्ति क्षिपन्तीत्युत्किराः । 'इगुपधज्ञा-' इत्यादिना कः । अत्यन्तं हिमानामुत्किरा अनिला यासु ताः सहस्यरात्रीः पोषरात्रीः । 'पौषे तैषसहस्यौ द्वौ' इत्यमरः । उदके वास उदवासः 'पेषंवासवाहनधिषु च' इत्युदादेशः । उदवासे तत्परा आसक्ता तथा परस्पमाक्रन्दिन्यन्योन्यमाक्रोशिनि पुरोऽग्रे वियुक्ते विरहिणि । वियोगं प्राप्त इति यावत् । चक्रवाकी च चक्रवाकश्च चक्रवाकौ तयोश्चक्रवाकयोर्मिथुने द्वन्द्वे कृपावती सती निनाय । दुःखिषु कृपालत्वं महतां स्वभाव इति चक्रवाकमितुने कृपा न तु कामितयेति वाच्यानवकाशः । 'अप्सु वासस्तु हेमन्ते क्रमशो वर्धयेत्तपः' । इति मनः ॥ 5.26 ॥
+निनायेति । सा पार्वती । उत्किरन्ति क्षिपन्तीत्युत्किराः । 'इगुपधज्ञा-' इत्यादिना कः । अत्यन्तं हिमानामुत्किरा अनिला यासु ताः सहस्यरात्रीः पोषरात्रीः । 'पौषे तैषसहस्यौ द्वौ' इत्यमरः । उदके वास उदवासः 'पेषंवासवाहनधिषु च' इत्युदादेशः । उदवासे तत्परा आसक्ता तथा **परस्पमाक्रन्दिन्य्** अन्योन्यमाक्रोशिनि पुरोऽग्रे **वियुक्ते** विरहिणि । वियोगं प्राप्त इति यावत् । चक्रवाकी च चक्रवाकश्च चक्रवाकौ तयोश्चक्रवाकयोर्मिथुने द्वन्द्वे कृपावती सती निनाय । दुःखिषु कृपालुत्वं महतां स्वभाव इति चक्रवाकमितुने कृपा न तु कामितयेति वाच्यानवकाशः । 'अप्सु वासस्तु हेमन्ते क्रमशो वर्धयेत्तपः' । इति मनः ॥ 5.26 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-मुखेन सा पद्मसुगन्धिना निशि प्रवेपमानाधरपत्त्रशोभिना ।  
-तुषारवृष्टिक्षतपद्ममसेपदां सरोजसंधानमिवाकरोदपाम् ॥ 5.27 ॥  
+मुखेन सा पद्म-सुगन्धिना निशि  प्रवेपमाना ऽधर-पत्त्र-शोभिना ।  
+तुषार-वृष्टि-क्षत-पद्म-सम्पदाम् सरो-ज--सन्धानम् **इवाकरोद्** अपाम् ॥ 5.27 ॥  +++(5)+++
 </details>
+
+<details><summary>English</summary>
+
+(27.) At night, she replaced the (beauty of) lotuses, of the waters (of the stream), the wealth of lotuses of which was destroyed by the showers of snow, by her face, as fragrant as the lotus (itself) and shining with the quivering leaf of the nether lip. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
 मुखेन सा पद्मसुगन्धिना निशि प्रवेपमानाधरपत्त्रशोभिना ।  
-तुषारवृष्टिक्षतपद्ममसेपदां सरोजसंधानमिवाकरोदपाम् ॥ 5.27 ॥  
+तुषारवृष्टिक्षतपद्मसम्पदाम् सरोजसन्धानमिवाकरोदपाम् ॥ 5.27 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -716,9 +813,19 @@ Never slack in her care she personally rented up the saplings with outpourings f
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-स्वयं विशीर्णद्रुमपर्णवृत्तिता परा हि काष्ठा तपसस्तया पुनः ।  
-तदप्यपाकीर्णमतः प्रियंवदां वदन्त्यपर्णेति च तां पुराविदः ॥ 5.28 ॥  
+स्वयं विशीर्ण-द्रुम-पर्ण-+++(भोजन-)+++वृत्तिता  
+परा हि काष्ठा तपसस्, तया पुनः ।  
+तद् अप्य् अपाकीर्णम्, अतः प्रियंवदां  
+**वदन्त्य्** अपर्णेति च तां पुरा-विदः ॥ 5.28 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(28.) 
+The sternest severity of austerities lies in subsisting on leaves fallen from the trees of their own accord; but that also she spurued; hence was that gentle-talker named Aparna by those conversant with history. 
+
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -738,9 +845,19 @@ Never slack in her care she personally rented up the saplings with outpourings f
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-मृणालिकापेलवमेवमादिभिर्व्रतैः स्वमङ्गं ग्लपयन्त्यहर्निशम् ।  
-तपः शरीरैः कठिनैरुपार्जितं तपस्विनां दूरमधश्चकार सा ॥ 5.29 ॥  
+मृणालिका-पेलवम्+++(=कोमलम्)+++ एवम् आदिभिर्  
+व्रतैः स्वम् अङ्गं **ग्लपयन्त्य्** अहर्-निशम् ।  
+तपः शरीरैः कठिनैर् उपार्जितं  
+तपस्विनां दूरम् **अधश् चकार** सा ॥ 5.29 ॥  +++(5)+++
 </details>
+
+<details><summary>English</summary>
+
+(29.) 
+By this and other kinds of penance, she, wasting her frame delicate as a lotus fibre, day and night, left far behind the tapas practised by auchorites with hardened frames. 
+
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -758,11 +875,21 @@ Never slack in her care she personally rented up the saplings with outpourings f
 मृणालिकेति । मृणालिकापेलवं पद्मिनीकन्दकोमलं स्वं स्वकीयमङ्गं शरीमेवमुक्तप्रकारतोयाग्निमध्यवासव्रतमादिर्येषां तैर्व्रतेरहश्च निशा चाहर्निशम् । समाहारे द्वन्द्वैकवद्भावः, अत्यन्तसंयोगे द्वितीया । ग्लपयन्ती कर्शयन्ती सा पार्वती कठिनैः क्लेशसहैरित्यर्थः । शरीरैरुपार्जितं संपादितं तपस्विनामृषीणां तपो दूरमत्यन्तमधश्चकार तिरश्चकार । अतिशिश्य इत्यर्थः । तपस्विभिरप्यवं तपः कर्तुं न शक्यत इति तात्पर्यार्थः ॥ 5.29 ॥
 </details>
 
+## वटु-संवादः
+### कुशल-प्रश्नः
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अथाजिनाषाढधरः प्रगल्भवाग्ज्वलन्निव ब्रह्ममयेन तेजसा ।  
-विवेश कश्चिज्जटिलस्तपोवनं शरीरबद्धः प्रथमाश्रमे यथा ॥ 5.30 ॥  
+अथाजिनाषाढ+++(=पलाश-दण्ड)+++-धरः  प्रगल्भ-वाग्  
+ज्वलन्न् इव ब्रह्ममयेन तेजसा ।  
+**विवेश** कश्चिज् जटिलस् तपो-वनं  
+शरीर-बद्धः प्रथमाश्रमे यथा ॥ 5.30 ॥+++(4)+++  
 </details>
+
+<details><summary>English</summary>
+
+(30.) Then a certain ascetic (lit, one with matted hair ) wearing an antelope's skin, and holding a staff of Palàsha, of ripe speech and burning, as it were. (refulgent) with Brahmanic lustre, entered the penance forest, like the first stage of life (Brahmacharya) embodied. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -782,9 +909,19 @@ Never slack in her care she personally rented up the saplings with outpourings f
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तमातिथेयी बहुमानपूर्वया सपर्यया प्रत्युदियाय पार्वती ।  
-भवन्ति साम्येऽपि निविष्टचेतसां वपुर्विशेषेष्वतिगौरवाः क्रियाः ॥ 5.31 ॥  
+तम् आतिथेयी बहु-मान-पूर्वया  
+सपर्यया **प्रत्युदियाय** पार्वती ।  
+**भवन्ति** साम्ये ऽपि +++(धर्म-)+++निविष्ट-चेतसां  
+वपुर्-विशेषेष्व् अतिगौरवाः क्रियाः ॥ 5.31 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(31.) 
+To meet him went forth, offering worship with great reverence, Parvati, kindly disposed towards (all) guests; even when there is equality, the acts of the firmminded towards special personages are such as are full of extreme reverence. 
+
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -804,9 +941,17 @@ Never slack in her care she personally rented up the saplings with outpourings f
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-विधिप्रयुक्तां परिगृह्य सत्कियां परिश्रमं नाम विनीय च क्षणम् ।  
-उमां स पश्यन्नृजुनैव चक्षुषा प्रचक्रमे वक्तुमनुज्झितक्रमः ॥ 5.32 ॥  
+विधि-प्रयुक्तां **परिगृह्य** सत्-कियां  
+परिश्रमं नाम **विनीय** च क्षणम् ।  
+उमां स **पश्यन्न्** ऋजुनैव चक्षुषा  
+**प्रचक्रमे** वक्तुम् अन्-उज्झित-क्रमः ॥ 5.32 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(32.) Having accepted the worship (hospitality) performed according to proper rites, and apparently eased his fatigue for a moment he, looking at Umà with quite pure eyes, began to speak to her, not forgetting proper manners. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -826,19 +971,28 @@ Never slack in her care she personally rented up the saplings with outpourings f
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अपि क्रियार्थ सुलभं समित्कुशं जलान्यपि स्नानविधिक्षमाणि ते ।  
-अपि स्वशक्त्या तपसि प्रवर्तसे शरीरमाद्यं खलु धर्मसाधनम् ॥ 5.33 ॥  
+अपि क्रियाऽर्थं सुलभं समित्-कुशं,  
+जलान्य् अपि स्नान-विधि-क्षमाणि ते ।  
+अपि स्वशक्त्या तपसि **प्रवर्तसे**  
+शरीरम् आद्यं खलु धर्म-साधनम् ॥ 5.33 ॥+++(5)+++  
 </details>
+
+<details><summary>English</summary>
+
+(33.) Are sacrificial wood and Kus'a grass easily obtainable for holy rites? Is the water suitable for thy bathing? Dost thou practise austerities proportionate to thy strength ? For the body is the ultimate means of performing religious duties. 
+</details>
+ 
+
 
 <details><summary>मूलम्</summary>
 
-अपि क्रियार्थ सुलभं समित्कुशं जलान्यपि स्नानविधिक्षमाणि ते ।  
+अपि क्रियाऽर्थं सुलभं समित्कुशं जलान्यपि स्नानविधिक्षमाणि ते ।  
 अपि स्वशक्त्या तपसि प्रवर्तसे शरीरमाद्यं खलु धर्मसाधनम् ॥ 5.33 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-(हे पार्वति !) क्रियाऽर्थ समित्कुशं सुलभम् अपि ? जलानि ते स्नानविदिक्षमाणि अपि ? स्वशक्त्या तपसि प्रवर्तसे अपि ? शरीरम् आद्यं धर्मसाधनम् खलु ।  
+(हे पार्वति !) क्रियाऽर्थं समित्कुशं सुलभम् अपि ? जलानि ते स्नानविदिक्षमाणि अपि ? स्वशक्त्या तपसि प्रवर्तसे अपि ? शरीरम् आद्यं धर्मसाधनम् खलु ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
@@ -848,9 +1002,19 @@ Never slack in her care she personally rented up the saplings with outpourings f
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अपि त्वदावर्जितवारिसंभृतं प्रवालमासामनुबन्धि वीरुधाम् ।  
-चिरोज्झितालक्तकपाटलेन ते तुलां यदारोहति दन्तवाससा ॥ 5.34 ॥  
+अपि त्वद्-आवर्जित-वारि-संभृतं  
+प्रवालम् आसाम् अनुबन्धि+++(=अनुस्यूतं)+++ वीरुधाम् ।  
+चिरोज्झितालक्तक-पाटलेन ते  
+तुलां यद् **आरोहति** दन्त-वाससा ॥ 5.34 ॥+++(5)+++  
 </details>
+
+<details><summary>English</summary>
+
+(34.) 
+Are the young leaves of these creepers made to sprout by the water sprinkled by thee, thriving ?-the leaves (32) which vie with thy nether lip, red though long bereft of the scarlet of Alaktaka (red lac. ) 
+
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -865,13 +1029,15 @@ Never slack in her care she personally rented up the saplings with outpourings f
 
 <details><summary>मल्लिनाथः</summary>
 
-अपीति । त्वयावर्जितेन सक्तेन वारिणा संभृतं जनितमासां वीरुधां लतानां प्रवाल पल्लवमनुबन्ध्यप्यनुस्यूतं किम् । यत्प्रवालं चिरोज्झितश्चिरकालत्यक्तो लाक्षारागो येन तत्तथापि पाटलम् । स्वभावरक्तमित्यर्थः । तेन चिरोज्झितालक्तकपाटलेन ते तव दन्तवाससाधरेण । 'ओष्ठाधरौ तु रदनच्छदौ दशनवाससी' इत्यमरः । तुलां साम्यमारोहति । गच्छतीत्यर्थः । अत्र तुलाशब्दस्य सादृश्यवाचित्वात्तद्योगेऽपि 'तुल्यार्थैरतुलोपमाभ्यामि'- ति न तृतीयाप्रतिषेधस्तत्र सूत्रे सदृशवाचिन एव ग्रहणादिति ॥ 5.34 ॥
+अपीति । त्वयावर्जितेन सक्तेन वारिणा संभृतं जनितमासां वीरुधां लतानां प्रवाल पल्लवमनुबन्ध्यप्य् अनुस्यूतं किम् । यत्प्रवालं चिरोज्झितश्चिरकालत्यक्तो लाक्षारागो येन तत्तथापि पाटलम् । स्वभावरक्तमित्यर्थः । तेन चिरोज्झितालक्तकपाटलेन ते तव दन्तवाससाधरेण । 'ओष्ठाधरौ तु रदनच्छदौ दशनवाससी' इत्यमरः । तुलां साम्यमारोहति । गच्छतीत्यर्थः । अत्र तुलाशब्दस्य सादृश्यवाचित्वात्तद्योगेऽपि 'तुल्यार्थैरतुलोपमाभ्यामि'- ति न तृतीयाप्रतिषेधस्तत्र सूत्रे सदृशवाचिन एव ग्रहणादिति ॥ 5.34 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अपि प्रसन्नं हरिणेषु ते मनः करस्थदर्भप्रणयापहारिषु ।  
-य उत्पलाक्षि ! प्रचलैविंलोचनैस्तवाक्षिसादृश्यमिव प्रयुञ्जते ॥ 5.35 ॥  
+अपि प्रसन्नं हरिणेषु ते मनः  
+कर-स्थ-दर्भ-प्रणयापहारिषु ।  
+य उत्पलाक्षि ! प्रचलैर्विलोचनैस्  
+तवाक्षिसादृश्यम् इव प्रयुञ्जते ॥ 5.35 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
