--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
@@ -971,8 +971,8 @@ To meet him went forth, offering worship with great reverence, Parvati, kindly d
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अपि क्रियाऽर्थं सुलभं समित्-कुशं,  
-जलान्य् अपि स्नान-विधि-क्षमाणि ते ।  
+अपि क्रियाऽर्थं **सुलभं** समित्-कुशं,  
+जलान्य् अपि स्नान-विधि-**क्षमाणि** ते ।  
 अपि स्वशक्त्या तपसि **प्रवर्तसे**  
 शरीरम् आद्यं खलु धर्म-साधनम् ॥ 5.33 ॥+++(5)+++  
 </details>
@@ -1003,7 +1003,7 @@ To meet him went forth, offering worship with great reverence, Parvati, kindly d
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अपि त्वद्-आवर्जित-वारि-संभृतं  
-प्रवालम् आसाम् अनुबन्धि+++(=अनुस्यूतं)+++ वीरुधाम् ।  
+प्रवालम् आसाम् **अनुबन्धि**+++(=अनुस्यूतं)+++ वीरुधाम् ।  
 चिरोज्झितालक्तक-पाटलेन ते  
 तुलां यद् **आरोहति** दन्त-वाससा ॥ 5.34 ॥+++(5)+++  
 </details>
@@ -1034,11 +1034,17 @@ Are the young leaves of these creepers made to sprout by the water sprinkled by 
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अपि प्रसन्नं हरिणेषु ते मनः  
+अपि **प्रसन्नं** हरिणेषु ते मनः  
 कर-स्थ-दर्भ-प्रणयापहारिषु ।  
-य उत्पलाक्षि ! प्रचलैर्विलोचनैस्  
-तवाक्षिसादृश्यम् इव प्रयुञ्जते ॥ 5.35 ॥  
+य उत्पलाक्षि ! प्रचलैर् विलोचनैस्  
+तवाक्षि-सादृश्यम् इव **प्रयुञ्जते** ॥ 5.35 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(35.) Is thy mind pleasingly disposed towards the fawns, who take the Kus'a grass from thy hands through their love (for thee) and who, O lotus-eyed one, present a close resemblance to thy eyes with their unsteady glances ? 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -1058,13 +1064,20 @@ Are the young leaves of these creepers made to sprout by the water sprinkled by 
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-यदुच्यते पार्वति ! पापवृत्तये न रुपमित्यव्यभिचारि तद्वचः ।  
-तथाहि ते शीलमुदारदर्शने ! तपस्विनामप्युपदेशातां गतम् ॥ 5.36 ॥  
+यद् **उच्यते** पार्वति ! "पाप-वृत्तये  
+न रूपम्" इत्य् **अव्यभिचारि** तद् वचः ।  
+तथाहि ते शीलम् उदार-दर्शने !  तपस्विनाम् अप्य् **उपदेशातां गतम्** ॥ 5.36 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(36.) O Mountain-born lady, the observation that beauty never leads to a sinful course of life is not false (lit. not a deviation from a general rule) as, O thou of noble form, thy conduct has become worthy of imitation even for the ascetics. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
-यदुच्यते पार्वति ! पापवृत्तये न रुपमित्यव्यभिचारि तद्वचः ।  
+यदुच्यते पार्वति ! पापवृत्तये न रूपमित्यव्यभिचारि तद्वचः ।  
 तथाहि ते शीलमुदारदर्शने ! तपस्विनामप्युपदेशातां गतम् ॥ 5.36 ॥  
 </details>
 
@@ -1078,15 +1091,24 @@ Are the young leaves of these creepers made to sprout by the water sprinkled by 
 यदिति । हे पार्वति ! रूपं सौम्याकृतिः पापवृत्तये पापाचरणाय न भवतीति यदुच्यते । लोकैरिति शेषः । तद्वचो न व्यभिचरति न स्खलतीत्यव्यभिचारि सत्यम् । 'यत्राकृतिस्तत्र गुणाः' 'न सुरुपाः पापसमाचारा भवन्ति' इत्यादयो लोकवादा न विसंवादमासादयन्तीत्यर्थः । क्मिति ज्ञायते-तथाहि । हे उदारदर्शने आयताक्षि ! सुरुपे इत्यर्थः । अथवोन्नतज्ञोने । विकेकवतीत्यर्थः । ते तव शीलं सद्वृत्तम् । 'शीलं स्वभावे सद्वृत्ते' इत्यमरः । तपस्विनामप्युपदिश्यतेऽनेनेत्युपदेशः प्रवर्तकं प्रमाणं तत्तामुपदेशतां गतं प्राप्तम् । मुनयोऽपि, त्वां वीक्ष्य स्ववृत्तै प्रवर्तन्त इति भावः ॥ 5.36 ॥
 </details>
 
+### कारण-प्रश्नः
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-विकीर्णसप्तर्षिबलिप्रहासिभिस्तथा न गाङ्गैः सलिलैर्दिवश्युतैः ।  
-यथा त्वदीयैश्चरितैरनाविलैर्महीधरः पावित एष सान्वयः ॥ 5.37 ॥  
+विकीर्ण-सप्त-र्षि--बलि-प्रभासिभिस् +++(→सलिलैः)+++  
+तथा **न** गाङ्गैः **सलिलैर्** दिवश्-च्युतैः ।  
+यथा त्वदीयैश् **चरितैर्** अनाविलैर्  
+महीधरः पावित एष **सान्वयः** ॥ 5.37 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(37.) This Up-holder of the earth (Mountain) together with his family, has not been so sanctified by the waters of the Ganges, dropping from the firmament and resplendent with the offerings of flowers scattered by the seven (heavenly) Sages, as he has been by thy pure acts (lit. free from the taint of sin). 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
-विकीर्णसप्तर्षिबलिप्रहासिभिस्तथा न गाङ्गैः सलिलैर्दिवश्युतैः ।  
+विकीर्णसप्तर्षिबलिप्रहा(भा)सिभिस् तथा न गाङ्गैः सलिलैर्दिवश्च्युतैः ।  
 यथा त्वदीयैश्चरितैरनाविलैर्महीधरः पावित एष सान्वयः ॥ 5.37 ॥  
 </details>
 
@@ -1102,9 +1124,17 @@ Are the young leaves of these creepers made to sprout by the water sprinkled by 
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अनेन धर्मः सविशेषमद्य मे त्रिवर्गसारः प्रतिभाति भाविनि ! ।  
-त्वया मनोनिर्विषयार्थकामया यदेक एव प्रतिगृह्य सेव्यते ॥ 5.38 ॥  
+अनेन **धर्मः** सविशेषम् अद्य मे  
+त्रि-वर्ग-सारः **प्रतिभाति** भाविनि ! ।  
+त्वया मनो-निर्विषय-+अर्थ-कामया  
+यद् एक +++(धर्म)+++ एव **प्रतिगृह्य सेव्यते** ॥ 5.38 ॥ +++(5)+++ 
 </details>
+
+<details><summary>English</summary>
+
+(38.) O thou of pure intentions, on account of this thy. conduct, pursuit of religion strikes me pre-eminently as the best of the group of the three (viz. Dharma, Artha and Kàma), as this only has been selected and followed by thee, with a mind from which all thought of Artha (wealth) and Kama (desire) has been sent out. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -1122,18 +1152,33 @@ Are the young leaves of these creepers made to sprout by the water sprinkled by 
 अनेनेति । हे भाविनि प्रशास्ताभिप्राये ! अनेन कारणेन धर्मः सविशेषं सातिशयमद्य मे । त्रयाणां धर्मकामार्थानां वर्गस्त्रिवर्ग) । 'त्रिवर्गो धर्मकामार्थैश्चतुर्वर्गः समीक्षकैः' । इत्यमरः । तत्र सारः श्रेष्ठः प्रतिभाति । यद्यस्मात्कारणान्मनसो निर्विषयावर्थकामौ यस्यास्तया त्वयैको धर्म एव प्रतिगृह्य स्वीकृत्य सेव्यते । यत्त्वयार्थकामौ यस्यास्तया त्वयैको धर्म एव प्रतिगृह्य स्वीकृत्य केव्यते । यत्त्वयार्थकामौ विहाय धर्म एवावलम्भितः, अतः सर्वेषां नः स श्रेयानिति प्रतिपद्यत इत्यर्थः ॥ 5.38 ॥
 </details>
 
-<details open><summary>विश्वास-प्रस्तुतिः</summary>
+<details><summary>मल्लिनाथः - प्रस्तावः</summary>
 
 सम्प्रति मनोरथं जिज्ञासुः प्रस्तौति-  
-प्रयुक्तसत्कारविशेषमात्मना न मां परं संप्रतिपत्तुमर्हसि ।  
-यतः सतां संनतगात्रि ! संगतं मनीषिभिः साप्तपदीनमुच्यते ॥ 5.39 ॥  
 </details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+प्रयुक्त-सत्-कार-विशेषम् आत्मना  
+**न** मां परं **संप्रतिपत्तुम् अर्हसि** ।  
+यतः सतां सन्नतगात्रि ! **संगतं**  
+मनीषिभिः **साप्तपदीनम् उच्यते** ॥ 5.39 ॥+++(5)+++  
+</details>
+
+<details><summary>English</summary>
+
+(39.) 
+It does not behove thee to regard me as a stranger, To whom special hospitality was accorded by thee; for, O thon of stooping body, the friendship of good people is de clared to be formed after seven words have been exchanged between them (or seven steps gone over together). 
+
+</details>
+
 
 <details><summary>मूलम्</summary>
 
 सम्प्रति मनोरथं जिज्ञासुः प्रस्तौति-  
 प्रयुक्तसत्कारविशेषमात्मना न मां परं संप्रतिपत्तुमर्हसि ।  
-यतः सतां संनतगात्रि ! संगतं मनीषिभिः साप्तपदीनमुच्यते ॥ 5.39 ॥  
+यतः सतां सन्नतगात्रि ! संगतं मनीषिभिः साप्तपदीनमुच्यते ॥ 5.39 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -1148,9 +1193,16 @@ Are the young leaves of these creepers made to sprout by the water sprinkled by 
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अतोत्र किंचिद्भवतीं बहुक्षमां द्विजातिभावादुपपन्नचापलः ।  
-अयं जनः प्रष्टुमनास्तपोधने ! न चेद्रहस्यं प्रतिवक्तुमर्हसि ॥ 5.40 ॥  
+अतोऽत्र किंचिद् भवतीं बहु-क्षमां  द्वि-जाति-भावाद् उपपन्न-चापलः ।  
+अयं जनः **प्रष्टु-मनास्** तपोधने !  
+न चेद् रहस्यं **प्रतिवक्तुम् अर्हसि** ॥ 5.40 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(40.) Hence, O thou to whom penance is a reasure, I, whom curiosity, natural to the twice-born (a Brahmana), - roused, au desirous of asking something to thee, a lady of great forbearance. If it be not a secret, thou wilt kindly give a reply. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -1168,12 +1220,25 @@ Are the young leaves of these creepers made to sprout by the water sprinkled by 
 अत इति । हे तपोधने ! अतः सख्याद्वेतोरत्र बहुक्षमाम् । बहूक्तिसहाम् यद्वा क्षमावतीम् । भवतीं त्वां द्विजातिभावाद् ब्राह्मणात्वादुपपन्नचापलः सुलभधार्ष्ट्योयं जनः । स्वयमित्यर्थः । किंचित्प्रष्टुं मनो यस्य स किञ्चित्प्रष्टुमनाः प्रष्टकामः । 'तुं काममनसोरपी' ति मकारलोपः । रहसि भवं रहस्य गोप्यं न चेत्प्रतिवक्तुमर्हसि ॥ 5.40 ॥
 </details>
 
-<details open><summary>विश्वास-प्रस्तुतिः</summary>
+<details><summary>विस्तारः (द्रष्टुं नोद्यम्) - प्रस्तावः</summary>
 
 प्रष्टव्यमाह-  
-कुले प्रसूतिः प्रथमस्य वेधसस्त्रिलोकसौन्दर्यमिवोदितं वपुः ।  
-अमृग्यमैश्र्वर्यसुखं, नवं वयस्तपःफलं स्यात्किमतः परं वद ॥ 5.41 ॥  
 </details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+कुले प्रसूतिः प्रथमस्य वेधसस्,  
+त्रिलोक-सौन्दर्यम् इवोदितं वपुः ।  
+अमृग्यम् ऐश्र्वर्य-सुखं, नवं वयस्  
+तपःफलं स्यात् किम् अतः परं वद ॥ 5.41 ॥+++(5)+++  
+</details>
+
+<details><summary>English</summary>
+
+(41.) Thy birth is in the family of the first progenitor of mankind); thy shape is as if the manifestation of the collected beauty of the three worlds, the happiness of afflunce is not for thee to seek; and thine is fresh youth; say what blessings, other than these, can be the reward of Penance. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -1194,9 +1259,17 @@ Are the young leaves of these creepers made to sprout by the water sprinkled by 
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-भवत्यनिष्टादपि नाम दुःसहान्मनस्विनीनां प्रतिपत्तिरीदृशी ।  
-विचारमार्गप्रहितेन चेतसा न दृश्यते तच्च कृशोदिरि ! त्वयि ।. 5.42 ॥  
+**भवत्य्** अनिष्टाद् अपि नाम दुःसहान्  
+मनस्विनीनां प्रतिपत्तिर् ईदृशी ।  
+विचार-मार्ग-प्रहितेन चेतसा  
+**न दृश्यते** तच्च कृशोदिरि ! त्वयि ।. 5.42 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(42.) Such a course of action is possibly followed by high- ( 33 ) minded ladies when overtaken by an unbearable evil; but such a one, O thon of slender waist, can not be discovered in thy case by the mind directed through the channel of thought. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -1214,9 +1287,14 @@ Are the young leaves of these creepers made to sprout by the water sprinkled by 
 भवतीति ॥ दुःसहात्सोढुमशक्यादनिष्टाद्भर्त्रादिकृतादपि मनस्विनीनां धीरस्त्रीणामीदृशी तपश्चणलक्षणा प्रतिपत्तिः प्रवृत्तिः । 'प्रतिपत्तिस्तु गौरवे । प्राप्तौ प्रवृत्तौ प्रगल्भ्ये' इति केशवः । भवति नाम । नामेति सम्भावनायाम् । विचारमार्गे प्रहितेन चेतसा चित्तेन तदनिष्टं च । हे कृशोदरि ! त्वयि न दृश्यते । विचार्यमाणे तदपि नास्त्यसम्भावितत्वादित्यर्थः ॥ 5.42 ॥
 </details>
 
-<details open><summary>विश्वास-प्रस्तुतिः</summary>
+<details><summary>विस्तारः (द्रष्टुं नोद्यम्) - प्रस्तावः</summary>
 
 अनिष्टाभावमेव प्रपञ्चयति-  
+</details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 अलभ्यशोकाभिभवेयमाकृतिर्विमानना सुभ्रु ! कुतः पितुर्गृहे ।  
 पराभिमर्शो न तवास्ति कः करं प्रसारयेत्पन्नगरत्नसूचये ॥ 5.43 ॥  
 </details>
